diesel_compile_tests/tests/compile-fail/table_invalid_syntax_2.rs
#[macro_use] extern crate diesel;

table! {
     some wrong syntax
}
// error-pattern: invalid table! syntax

fn main() {}
